* Fix backend used following trytond upgrade
* Module creation