@@ -1,2 +1,3 @@
+* OTH#00000 Update tests to Tryton 6.4
 * Fix backend used following trytond upgrade
 * Module creation
